--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -43,4 +43,4 @@ jobs:
 
     - name: Validate Deployment
       run: |
-        curl http://${{ secrets.EC2_PUBLIC_IP }}:5000/status  # Replace with the actual EC2 IP or use a secret for dynamic fetching
+        curl http://${{ secrets.EC2_PUBLIC_IP }}:5000/status  # This will use the secret dynamically
