--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -10,26 +10,26 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
-      
+
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v1
-      
+
     - name: Log in to DockerHub
       uses: docker/login-action@v2
       with:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
-        
+
     - name: Build Docker Image
       run: |
         TAG_NAME=$(echo ${{ github.ref }} | sed 's/refs\/tags\///')
-        docker build -t my-app:$TAG_NAME .
-        
+        docker build -t alekyagandem/my-app:$TAG_NAME .
+
     - name: Push Docker Image to Docker Hub
       run: |
         TAG_NAME=$(echo ${{ github.ref }} | sed 's/refs\/tags\///')
-        docker push my-app:$TAG_NAME
-        
+        docker push alekyagandem/my-app:$TAG_NAME
+
     - name: SSH into EC2 and Deploy
       uses: appleboy/ssh-action@v0.1.0
       with:
@@ -43,4 +43,4 @@ jobs:
 
     - name: Validate Deployment
       run: |
-        curl http://$EC2_PUBLIC_IP:5000/status
+        curl http://${{ secrets.EC2_PUBLIC_IP }}:5000/status
