--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -22,12 +22,12 @@ jobs:
 
     - name: Build Docker Image
       run: |
-        TAG_NAME=$(echo ${{ github.ref }} | sed 's/refs\/tags\///')
+        TAG_NAME=$(echo ${{ github.ref }} | sed 's/refs\/tags\///')  # Remove refs/tags/ prefix
         docker build -t alekyagandem/my-app:$TAG_NAME .
 
     - name: Push Docker Image to Docker Hub
       run: |
-        TAG_NAME=$(echo ${{ github.ref }} | sed 's/refs\/tags\///')
+        TAG_NAME=$(echo ${{ github.ref }} | sed 's/refs\/tags\///')  # Remove refs/tags/ prefix
         docker push alekyagandem/my-app:$TAG_NAME
 
     - name: SSH into EC2 and Deploy
