--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,7 +1,7 @@
 on:
   push:
     tags:
-      - 'v*'
+      - 'v*'  # Trigger the workflow on tags that start with 'v'
 
 jobs:
   build:
@@ -23,11 +23,13 @@ jobs:
     - name: Build Docker Image
       run: |
         TAG_NAME=$(echo ${{ github.ref }} | sed 's/refs\/tags\///')  # Remove refs/tags/ prefix
+        echo "Building Docker image with tag: $TAG_NAME"
         docker build -t alekyagandem/my-app:$TAG_NAME .
 
     - name: Push Docker Image to Docker Hub
       run: |
         TAG_NAME=$(echo ${{ github.ref }} | sed 's/refs\/tags\///')  # Remove refs/tags/ prefix
+        echo "Pushing Docker image with tag: $TAG_NAME"
         docker push alekyagandem/my-app:$TAG_NAME
 
     - name: SSH into EC2 and Deploy
