--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,41 +1,45 @@
+name: CI/CD Pipeline
+
 on:
   push:
     tags:
-      - 'v*'  # This will trigger the workflow on tags that start with 'v'
+      - 'v*'  # This will trigger the workflow when a tag starting with 'v' is pushed
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
+    # Step 1: Checkout the code
     - name: Checkout code
       uses: actions/checkout@v2
 
+    # Step 2: Set up Docker Buildx
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v1
 
+    # Step 3: Log in to DockerHub
     - name: Log in to DockerHub
       uses: docker/login-action@v2
       with:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
 
+    # Step 4: Build the Docker image
     - name: Build Docker Image
       run: |
-        # Extract the tag name (removes 'refs/tags/' from github.ref)
-        TAG_NAME=${{ github.ref }}
-        TAG_NAME=${TAG_NAME/refs\/tags\//}  # Strip off 'refs/tags/' prefix
-        echo "Building Docker image with tag: $TAG_NAME"
+        # Remove 'refs/tags/' prefix to get just the tag name (e.g., v1.0)
+        TAG_NAME=$(echo ${{ github.ref }} | sed 's/refs\/tags\///')
         docker build -t alekyagandem/my-app:$TAG_NAME .
 
+    # Step 5: Push the Docker image to Docker Hub
     - name: Push Docker Image to Docker Hub
       run: |
-        # Extract the tag name again (removes 'refs/tags/' from github.ref)
-        TAG_NAME=${{ github.ref }}
-        TAG_NAME=${TAG_NAME/refs\/tags\//}  # Strip off 'refs/tags/' prefix
-        echo "Pushing Docker image with tag: $TAG_NAME"
+        # Remove 'refs/tags/' prefix to get just the tag name (e.g., v1.0)
+        TAG_NAME=$(echo ${{ github.ref }} | sed 's/refs\/tags\///')
         docker push alekyagandem/my-app:$TAG_NAME
 
+    # Step 6: SSH into EC2 and Deploy the Docker container
     - name: SSH into EC2 and Deploy
       uses: appleboy/ssh-action@v0.1.0
       with:
@@ -43,10 +47,16 @@ jobs:
         username: ${{ secrets.REMOTE_USER }}
         key: ${{ secrets.REMOTE_SSH_KEY }}
         script: |
-          cd my-app
+          # Navigate to the application directory
+          cd /path/to/your/application/directory
+
+          # Pull the latest Docker image
           docker-compose pull
+
+          # Restart containers in detached mode
           docker-compose up -d
 
+    # Step 7: Validate the deployment
     - name: Validate Deployment
       run: |
         curl http://${{ secrets.EC2_PUBLIC_IP }}:5000/status
