--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -10,36 +10,32 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    # Step 1: Checkout the code
     - name: Checkout code
       uses: actions/checkout@v2
 
-    # Step 2: Set up Docker Buildx
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v1
 
-    # Step 3: Log in to DockerHub
     - name: Log in to DockerHub
       uses: docker/login-action@v2
       with:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
 
-    # Step 4: Build the Docker image
     - name: Build Docker Image
       run: |
         # Extract the tag from the GitHub reference and remove 'refs/tags/'
-        TAG_NAME=${GITHUB_REF#refs/tags/}
+        TAG_NAME="${GITHUB_REF#refs/tags/}"
+        echo "Tag name is $TAG_NAME"  # This will print the tag name for debugging
         docker build -t alekyagandem/my-app:$TAG_NAME .
 
-    # Step 5: Push the Docker image to Docker Hub
     - name: Push Docker Image to Docker Hub
       run: |
         # Extract the tag from the GitHub reference and remove 'refs/tags/'
-        TAG_NAME=${GITHUB_REF#refs/tags/}
+        TAG_NAME="${GITHUB_REF#refs/tags/}"
+        echo "Pushing Docker image with tag: $TAG_NAME"
         docker push alekyagandem/my-app:$TAG_NAME
 
-    # Step 6: SSH into EC2 and Deploy the Docker container
     - name: SSH into EC2 and Deploy
       uses: appleboy/ssh-action@v0.1.0
       with:
@@ -47,7 +43,10 @@ jobs:
         username: ${{ secrets.REMOTE_USER }}
         key: ${{ secrets.REMOTE_SSH_KEY }}
         script: |
-          # Navigate to the application directory
           cd /path/to/your/application/directory
+          docker-compose pull
+          docker-compose up -d
 
-         
+    - name: Validate Deployment
+      run: |
+        curl http://${{ secrets.EC2_PUBLIC_IP }}:5000/status
